--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-streamlit==1.28.1
-langchain==0.1.0
-langchain-community==0.0.10
-langchain-openai==0.0.5
-chromadb==0.4.15
-openai>=1.10.0
-sentence-transformers==2.2.2
-pandas==2.1.3
-numpy==1.24.3
-python-dotenv==1.0.0
-tiktoken>=0.5.2
+streamlit
+langchain
+langchain-community
+chromadb
+pandas
+numpy
+python-dotenv
